[gd_scene load_steps=41 format=3 uid="uid://q88x6y11n1jm"]

[ext_resource type="Script" path="res://scenes/PlaygroundUI.gd" id="1_ioibl"]
[ext_resource type="Texture2D" uid="uid://bg82qawkt7a6b" path="res://assets/gui/center_background.png" id="2_sdntq"]
[ext_resource type="PackedScene" uid="uid://byf84h81elkst" path="res://scenes/ColorBar.tscn" id="3_cnn6e"]
[ext_resource type="PackedScene" uid="uid://b461ic7wcaucj" path="res://scenes/IFSMenu.tscn" id="4_bt6nk"]
[ext_resource type="Texture2D" uid="uid://c0ikmcsba2msv" path="res://assets/gui/playground_buttons.png" id="4_fd4oq"]
[ext_resource type="PackedScene" uid="uid://cnh2ciowfjn42" path="res://scenes/Playground.tscn" id="4_xpdbu"]
[ext_resource type="PackedScene" uid="uid://ci4h23rvdej3t" path="res://scenes/AdvancedOptions.tscn" id="4_yd3uv"]
[ext_resource type="PackedScene" uid="uid://co7ekdte8fr1f" path="res://scenes/Presets.tscn" id="5_jja2r"]
[ext_resource type="PackedScene" uid="uid://bdcy8qeketbv2" path="res://scenes/MatrixOptions.tscn" id="5_nxfo1"]

[sub_resource type="InputEventKey" id="InputEventKey_6slxs"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="InputEventKey" id="InputEventKey_06eut"]
device = -1
keycode = 43
unicode = 43

[sub_resource type="Shortcut" id="Shortcut_pboob"]
events = [SubResource("InputEventKey_6slxs"), SubResource("InputEventKey_06eut")]

[sub_resource type="AtlasTexture" id="AtlasTexture_y2edm"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l22sp"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5vrq"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bytrw"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xys4"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mc7g"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 128, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_ptcdk"]
device = -1
keycode = 4194305

[sub_resource type="InputEventKey" id="InputEventKey_4mcv5"]
device = -1
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_5hmfe"]
events = [SubResource("InputEventKey_ptcdk"), SubResource("InputEventKey_4mcv5")]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5pe3"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbxom"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv145"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_1kcjd"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_jhmuf"]
events = [SubResource("InputEventKey_1kcjd")]

[sub_resource type="AtlasTexture" id="AtlasTexture_l4f0q"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u86y8"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvj1"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_440vp"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_cmo8y"]
events = [SubResource("InputEventKey_440vp")]

[sub_resource type="AtlasTexture" id="AtlasTexture_pjd7y"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsctq"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eyvm"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqsg6"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0188"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf6n6"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ggf0"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow37h"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eflp8"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 320, 32, 32)

[node name="PlaygroundUI" type="MarginContainer"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_ioibl")

[node name="Playground" parent="." instance=ExtResource("4_xpdbu")]

[node name="Center" type="MarginContainer" parent="."]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Frame" type="NinePatchRect" parent="Center"]
layout_mode = 2
texture = ExtResource("2_sdntq")
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="Center" type="MarginContainer" parent="Center"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="BlueTexture" type="TextureRect" parent="Center/Center"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
mouse_filter = 2

[node name="Left" type="MarginContainer" parent="."]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Main" type="VBoxContainer" parent="Left"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddButton" type="TextureButton" parent="Left/Main"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
shortcut = SubResource("Shortcut_pboob")
texture_normal = SubResource("AtlasTexture_y2edm")
texture_pressed = SubResource("AtlasTexture_l22sp")
texture_hover = SubResource("AtlasTexture_e5vrq")

[node name="CloseAllButton" type="TextureButton" parent="Left/Main"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_bytrw")
texture_pressed = SubResource("AtlasTexture_1xys4")
texture_hover = SubResource("AtlasTexture_6mc7g")

[node name="ButtonOptions" type="VBoxContainer" parent="Left/Main"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="RemoveButton" type="TextureButton" parent="Left/Main/ButtonOptions"]
layout_mode = 2
shortcut = SubResource("Shortcut_5hmfe")
texture_normal = SubResource("AtlasTexture_n5pe3")
texture_pressed = SubResource("AtlasTexture_jbxom")
texture_hover = SubResource("AtlasTexture_vv145")

[node name="ColorButton" type="TextureButton" parent="Left/Main/ButtonOptions"]
layout_mode = 2
shortcut = SubResource("Shortcut_jhmuf")
texture_normal = SubResource("AtlasTexture_l4f0q")
texture_pressed = SubResource("AtlasTexture_u86y8")
texture_hover = SubResource("AtlasTexture_nvvj1")

[node name="DuplicateButton" type="TextureButton" parent="Left/Main/ButtonOptions"]
layout_mode = 2
shortcut = SubResource("Shortcut_cmo8y")
texture_normal = SubResource("AtlasTexture_pjd7y")
texture_pressed = SubResource("AtlasTexture_rsctq")
texture_hover = SubResource("AtlasTexture_3eyvm")

[node name="Bottom" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Main" type="HBoxContainer" parent="Bottom"]
layout_mode = 2

[node name="AdvancedButton" type="TextureButton" parent="Bottom/Main"]
visible = false
layout_mode = 2
texture_normal = SubResource("AtlasTexture_rqsg6")
texture_pressed = SubResource("AtlasTexture_u0188")
texture_hover = SubResource("AtlasTexture_tf6n6")

[node name="RotatOptions" parent="Bottom/Main" instance=ExtResource("4_yd3uv")]
visible = false
layout_mode = 2

[node name="MatrixOptions" parent="Bottom/Main" instance=ExtResource("5_nxfo1")]
visible = false
layout_mode = 2

[node name="PresetsButton" type="Button" parent="Bottom/Main"]
layout_mode = 2
text = "Vorlagen"
alignment = 2

[node name="Presets" parent="Bottom/Main" instance=ExtResource("5_jja2r")]
visible = false
layout_mode = 2
size_flags_horizontal = 8

[node name="PresetTimer" type="Timer" parent="Bottom/Main"]
wait_time = 0.1
one_shot = true

[node name="Top" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="LoadIFSTimer" type="Timer" parent="Top"]
wait_time = 0.1
one_shot = true

[node name="IFSMenu" parent="Top" instance=ExtResource("4_bt6nk")]
visible = false
layout_mode = 2

[node name="IFSMenuButton" type="TextureButton" parent="Top"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_2ggf0")
texture_pressed = SubResource("AtlasTexture_ow37h")
texture_hover = SubResource("AtlasTexture_eflp8")

[node name="ColorBar" parent="." instance=ExtResource("3_cnn6e")]
visible = false
position = Vector2(540, 16)

[connection signal="pressed" from="Left/Main/AddButton" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Left/Main/CloseAllButton" to="." method="_on_close_all_pressed"]
[connection signal="pressed" from="Left/Main/ButtonOptions/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="Left/Main/ButtonOptions/ColorButton" to="." method="_on_color_button_pressed"]
[connection signal="pressed" from="Left/Main/ButtonOptions/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="Bottom/Main/AdvancedButton" to="." method="_on_advanced_button_pressed"]
[connection signal="close_me" from="Bottom/Main/RotatOptions" to="." method="_on_advanced_options_close_me"]
[connection signal="switch" from="Bottom/Main/RotatOptions" to="." method="_on_advanced_options_switch"]
[connection signal="value_changed" from="Bottom/Main/RotatOptions" to="." method="_on_advanced_options_value_changed"]
[connection signal="close_me" from="Bottom/Main/MatrixOptions" to="." method="_on_advanced_options_close_me"]
[connection signal="switch" from="Bottom/Main/MatrixOptions" to="." method="_on_matrix_options_switch"]
[connection signal="value_changed" from="Bottom/Main/MatrixOptions" to="." method="_on_advanced_options_value_changed"]
[connection signal="pressed" from="Bottom/Main/PresetsButton" to="." method="_on_presets_button_pressed"]
[connection signal="close_me" from="Bottom/Main/Presets" to="." method="_on_presets_close_me"]
[connection signal="load_preset" from="Bottom/Main/Presets" to="." method="_on_presets_load_preset"]
[connection signal="timeout" from="Bottom/Main/PresetTimer" to="." method="_on_preset_timer_timeout"]
[connection signal="timeout" from="Top/LoadIFSTimer" to="." method="_on_load_ifs_timer_timeout"]
[connection signal="change_ifs" from="Top/IFSMenu" to="." method="_on_ifs_menu_change_ifs"]
[connection signal="close_me" from="Top/IFSMenu" to="." method="_on_ifs_menu_close_me"]
[connection signal="pressed" from="Top/IFSMenuButton" to="." method="_on_ifs_menu_button_pressed"]
[connection signal="finished" from="ColorBar" to="." method="_on_color_bar_finished"]
